[package]
name = "iron_lss"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "Driver for Lynxmotion LSS servos"
edition = "2018"
repository = "https://github.com/dmweis/iron_lss"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["LSS", "Lynxmotion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio-serial = "4.3"
bytes = "0.5"
tokio = { version = "0.2", features = ["macros"], default-features = false }
tokio-util = { version = "0.3", features = ["codec"], default-features = false }

[dev-dependencies]
looprate = { git = "https://github.com/dmweis/looprate" }
clap = "3.0.0-beta.1"
async-std = "1.6"
dynamixel_driver = { git = "https://github.com/dmweis/dynamixel_driver" }
