[package]
name = "lss_driver"
version = "0.2.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

description = "Driver for Lynxmotion LSS servos"
documentation = "https://docs.rs/lss_driver"
homepage = "https://github.com/dmweis/lss_driver"
repository = "https://github.com/dmweis/lss_driver"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["LSS", "Lynxmotion", "servo", "async", "serial"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio-serial = { version = "4.3", default-features = false }
bytes = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"], default-features = false }
tokio-util = { version = "0.3", features = ["codec"], default-features = false }
async-trait = "0.1"
thiserror = "^1.0"

[dev-dependencies]
clap = "3.0.0-beta.1"
async-std = "1.6"
ctrlc = "3.1"
