[package]
name = "lss_driver"
version = "0.7.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"

description = "Driver for Lynxmotion LSS servos"
documentation = "https://docs.rs/lss_driver"
homepage = "https://github.com/dmweis/lss_driver"
repository = "https://github.com/dmweis/lss_driver"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["LSS", "Lynxmotion", "servo", "async", "serial"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio-serial = { version = "5.4", default-features = false }
bytes = "1.0"
tokio-util = { version = "0.6", features = ["codec"], default-features = false }
async-trait = "0.1"
thiserror = "^1.0"
tokio = { version = "1.12", features = ["time"], default-features = false }


[dev-dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"], default-features = false }
clap = "3.0.0-beta.1"
async-std = "1.6"
ctrlc = "3.1"
approx = "0.5"
